Issue #8412: make logo size consistent
- Ross pointed out that the new logo was a bit too big compared to the
  other elements. Resized logo. Restored padding so it is symmetric.

--- a/admin/app/styles/main.scss
+++ b/admin/app/styles/main.scss
@@ -35,5 +35,5 @@ body {
     margin-top: 10px;
 }
 .navbar .brand {
-	padding: 9px;
+	padding: 9px 15px;
 }
