--- a/dashboard/app/styles/main.scss
+++ b/dashboard/app/styles/main.scss
@@ -23,5 +23,5 @@
 @import 'partials/base';
 
 .navbar-brand {
-	padding: 9px;
+	padding: 9px 15px;
 }
