--- a/manage/app/styles/main.scss
+++ b/manage/app/styles/main.scss
@@ -87,5 +87,5 @@
 }
 
 .navbar-brand {
-	padding: 9px;
+	padding: 9px 15px;
 }
